--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,6 +17,11 @@
 
   <meta name="twitter:card" content="summary_large_image" />
 
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;500;600;700&family=Lora:wght@400;500;600;700&family=Inconsolata:wght@400;500;600;700&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
